crates/tokmd-analysis-format/tests/snapshots/analysis_snapshot_w54__w54_analysis_md_with_archetype.snap
---
source: crates/tokmd-analysis-format/tests/analysis_snapshot_w54.rs
expression: "text(render(&r, AnalysisFormat::Md).unwrap())"
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`

## Archetype

- Kind: `web-api`
- Evidence: `Cargo.toml`, `src/routes.rs`, `Dockerfile`
