crates/tokmd-analysis-format/tests/snapshots/analysis_snapshot_w54__w54_analysis_mermaid_with_imports.snap
---
source: crates/tokmd-analysis-format/tests/analysis_snapshot_w54.rs
expression: "text(render(&r, AnalysisFormat::Mermaid).unwrap())"
---
graph TD
  core -->|10| utils
  cli -->|5| core
