crates/tokmd-analysis-format/tests/snapshots/analysis_snapshot_w54__w54_analysis_svg_minimal.snap
---
source: crates/tokmd-analysis-format/tests/analysis_snapshot_w54.rs
expression: "text(render(&r, AnalysisFormat::Svg).unwrap())"
---
<svg xmlns="http://www.w3.org/2000/svg" width="240" height="32" role="img"><rect width="80" height="32" fill="#555"/><rect x="80" width="160" height="32" fill="#4c9aff"/><text x="40" y="20" fill="#fff" font-family="Verdana" font-size="12" text-anchor="middle">tokens</text><text x="160" y="20" fill="#fff" font-family="Verdana" font-size="12" text-anchor="middle">0</text></svg>
