crates/tokmd-analysis-format/tests/snapshots/analysis_snapshot_w54__w54_analysis_xml_minimal.snap
---
source: crates/tokmd-analysis-format/tests/analysis_snapshot_w54.rs
expression: "text(render(&r, AnalysisFormat::Xml).unwrap())"
---
<analysis></analysis>
